<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kryguu.zadanie2.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/rgbHsvTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RGBtoHSV"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textViewA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/A"/>
                <EditText
                    android:id="@+id/editTextA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="3"
                    android:hint="@string/intervalARGB"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textViewR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/R"/>
                <EditText
                    android:id="@+id/editTextR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="3"
                    android:hint="@string/intervalARGB"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textViewG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/G"/>
                <EditText
                    android:id="@+id/editTextG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="3"
                    android:hint="@string/intervalARGB"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textViewB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/B"/>
                <EditText
                    android:id="@+id/editTextB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="3"
                    android:hint="@string/intervalARGB"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/H" />
                <TextView
                    android:id="@+id/calculatedH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/S" />
                <TextView
                    android:id="@+id/calculatedS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/V" />
                <TextView
                    android:id="@+id/calculatedV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/hsvRgbTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HSVtoRGB"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textViewH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/H"/>
                <EditText
                    android:id="@+id/editTextH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="3"
                    android:hint="@string/intervalH"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textViewS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/S"/>
                <EditText
                    android:id="@+id/editTextS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="6"
                    android:hint="@string/intervalSV"
                    android:inputType="number|numberDecimal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textViewV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/V"/>
                <EditText
                    android:id="@+id/editTextV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="6"
                    android:hint="@string/intervalSV"
                    android:inputType="number|numberDecimal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/ARGBHex"
                        android:gravity="left|center_vertical"/>

                    <TextView
                        android:id="@+id/calculatedRGBHex"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/empty"
                        android:gravity="left|center_vertical"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/A" />
                    <TextView
                        android:id="@+id/calculatedA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/R" />
                    <TextView
                        android:id="@+id/calculatedR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/G" />
                    <TextView
                        android:id="@+id/calculatedG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/B" />
                    <TextView
                        android:id="@+id/calculatedB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <View
                android:id="@+id/rgbHsvView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <View
                android:id="@+id/hsvRgbView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
